fix video z-index, start post gallery

--- a/en/assets/css/styles.css
+++ b/en/assets/css/styles.css
@@ -67,7 +67,7 @@ a:hover { color: #fff; text-decoration: underline; -webkit-transition: all 0.2s 
 .social-media-list a:hover .username { text-decoration: underline; }
 
 /** Blockquotes */
-blockquote p { color: #fff; font-family: "DM Serif Display", serif; font-weight: 400; font-size: 47.25px; line-height: 1.25; letter-spacing: 1px; margin-right: 30px; }
+blockquote p { color: #fff; font-family: "DM Serif Display", serif; font-weight: 400; font-size: 47.25px; line-height: 1.25; letter-spacing: 1px; padding-right: 60px; }
 
 blockquote p > :last-child { margin-bottom: 0; }
 
@@ -316,6 +316,12 @@ table td { border: 1px solid #999999; }
 
 .pre-gallery img:nth-child(10) { z-index: 1; }
 
+.post-gallery { width: 100vw; height: 63vh; margin-top: 30px; margin-left: calc(550px - 50vw); padding: 0 calc(50vw - 550px); grid-column: 1 / span 2; overflow-x: scroll; overflow-y: hidden; white-space: nowrap; -ms-overflow-style: none; /* IE and Edge */ scrollbar-width: none; /* Firefox */ }
+
+.post-gallery::-webkit-scrollbar { display: none; }
+
+.post-gallery img { display: inline-block; height: 60vh; padding-right: 1vh; }
+
 /** Home */
 .home .luzyne-badge { position: absolute; width: 50%; height: 210px; margin: -120px auto 0; padding: 0; }
 
@@ -369,7 +375,7 @@ ul.post-list li h3 a:hover .hover_thumbnail { opacity: 1; margin-left: 30px; -we
 
 @media screen and (max-width: 1100px) { #video-modal .modal-content { width: 100vw; } }
 
-#video-modal:target { pointer-events: auto; opacity: 1; z-index: 11; -webkit-transition: opacity 0.4s cubic-bezier(0.25, 1, 0.5, 1), margin 0.4s cubic-bezier(0.25, 1, 0.5, 1); -moz-transition: opacity 0.4s cubic-bezier(0.25, 1, 0.5, 1), margin 0.4s cubic-bezier(0.25, 1, 0.5, 1); -ms-transition: opacity 0.4s cubic-bezier(0.25, 1, 0.5, 1), margin 0.4s cubic-bezier(0.25, 1, 0.5, 1); -o-transition: opacity 0.4s cubic-bezier(0.25, 1, 0.5, 1), margin 0.4s cubic-bezier(0.25, 1, 0.5, 1); transition: opacity 0.4s cubic-bezier(0.25, 1, 0.5, 1), margin 0.4s cubic-bezier(0.25, 1, 0.5, 1); }
+#video-modal:target { pointer-events: auto; opacity: 1; z-index: 15; -webkit-transition: opacity 0.4s cubic-bezier(0.25, 1, 0.5, 1), margin 0.4s cubic-bezier(0.25, 1, 0.5, 1); -moz-transition: opacity 0.4s cubic-bezier(0.25, 1, 0.5, 1), margin 0.4s cubic-bezier(0.25, 1, 0.5, 1); -ms-transition: opacity 0.4s cubic-bezier(0.25, 1, 0.5, 1), margin 0.4s cubic-bezier(0.25, 1, 0.5, 1); -o-transition: opacity 0.4s cubic-bezier(0.25, 1, 0.5, 1), margin 0.4s cubic-bezier(0.25, 1, 0.5, 1); transition: opacity 0.4s cubic-bezier(0.25, 1, 0.5, 1), margin 0.4s cubic-bezier(0.25, 1, 0.5, 1); }
 
 .dark-mode { display: block; width: 42px; text-align: center; margin-top: 84px; z-index: 0; user-select: none; -webkit-user-select: none; /* Safari fallback only */ -webkit-user-select: none; /* Chrome/Safari */ -moz-user-select: none; /* Firefox */ -ms-user-select: none; /* IE10+ */ }
 
